--- a/index.html
+++ b/index.html
@@ -4,6 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Should i bring an umbrella?</title>
+    <link rel="stylesheet" href="assets/style.css" />
+    <script
+      src="https://kit.fontawesome.com/b3d4efdc4f.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <header class="jumbotron">
+      <h1><i class="fas fa-sun"></i> Todays Weather <i class="fas fa-cloud-rain"></i></h1>
+    </header>
+    <div class="container">
+      <div class="row">
+          <div class="sidebar">
+              <div class="col-sm-1">
+                  <div class="card" style="width: 19rem; float:left;">
+                      <form class="form-inline my-2 my-lg-0">
+                          <input class="form-control mr-sm-2" type="search" id="search-input" placeholder="Search a location"
+                              aria-label="Search">
+                          <button class="btn btn-primary" type="submit" id="search">Search</button>
+                      </form>
+                      <ul class="list-group list-group-flush"></ul>
+                      <div id="cities"></div>
+                  </div>
+              </div>
+
+          <div class="row">
+            <div class="col-md-11">
+                <div class="card" style="width:45rem">
+                    <div class="card-body">
+                        <h3 id="current-city" style="float: left;">
+                            </h5>
+                            <h3 id="current-date">
+                                </h5>
+                                <div id="weather-image"></div>
+                                <div class="temp"></div>
+                                <div class="wind"></div>
+                                <div class="humidity"></div>
+                                <div class="uv-index"></div>
+                    </div>
+                </div>
+              </div>
+          </div>
+          </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-2">
+                    <div class="card">
+                      <div class="card-body">
+                      </div>
+                    </div>
+                  </div>
+              <div class="col-md-2">
+                <div class="card">
+                  <div class="card-body">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card">
+                  <div class="card-body">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card">
+                  <div class="card-body">
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-2">
+                <div class="card">
+                  <div class="card-body">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+              
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="assets/script.js"></script>
+  </body>
 </html>
